# py-sourcemod-installer

./: .gitignore  LICENSE  README.md  setup.cfg
sourcemod_installer/: __main__.py
