[metadata]
name = sourcemod-installer
version = 0.1.0
author = nosoop
description = Helper utility to install SourceMod.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nosoop/py-sourcemod-installer
classifiers =
    Topic :: System :: Installation/Setup
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    sourcemod_installer = sourcemod_installer.__main__:main
